--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       content="ChillTech cooling systems home page"
     />
     <title>ChillTech Cooling Systems</title>
+    <style>
+      html {
+  scroll-behavior: smooth;
+}
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
