--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script>
+    <script type="text/babel">
       if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
       navigator.serviceWorker.register('serviceWorker.js').then(function(registration) {
