--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="text/babel">
