--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="ChillTech cooling systems home page"
     />
-    <title>ChillTech Cooling Systems</title>
+    <title>AC Service in Kidangoor, Kottayam | ChillTech Cooling Systems</title>
     <style>
       html {
   scroll-behavior: smooth;
